kubernetes/nginx-reverse-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-custom
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: '*.mydomain.com'
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-custom
          servicePort: 80
